spec/grammar.ebnf
(* Kofun Stage 0 grammar, draft 0.2-bootstrap. *)

program          = separators, { declaration, separators }, EOF ;

declaration      = law_family_decl
                 | law_impl_decl
                 | law_check_decl
                 | record_type_decl
                 | function_decl
                 | meta_function_decl
                 | statement ;

(* Nominal records: see spec/records-v1.md. A record is constructed by the
   labelled call form below, never by `Name { ... }`, so no expression
   production begins with `{`. *)
record_type_decl = "type", identifier, "=", separators, record_body ;
record_body      = "{", separators,
                   record_field,
                   { separators, ",", separators, record_field },
                   [ separators, "," ], separators, "}" ;
record_field     = identifier, ":", type_ref ;

(* The quoted words in these three productions are contextual in these
   positions; Monad and other family names remain ordinary identifiers. *)
law_family_decl  = "law", identifier, [ type_parameters ], separators,
                   "{", separators,
                   { law_family_member, separators },
                   "}" ;
type_parameters  = "[", identifier, { ",", identifier }, "]" ;
law_family_member = law_operation | law_equation ;
law_operation    = "operation", identifier, "(", parameters, ")",
                   "->", type_ref ;
law_equation     = "equation", identifier, "(",
                   law_quantifiers, ")", "=", expression ;
law_quantifiers  = [ law_quantifier,
                   { separators, ",", separators, law_quantifier },
                   [ separators, "," ] ] ;
law_quantifier   = identifier, ":", type_ref, "in", identifier ;

law_impl_decl    = "impl", identifier, ":", nominal_type, separators,
                   "{", separators,
                   { law_impl_entry, separators, [ "," ], separators },
                   "}" ;
law_impl_entry   = identifier, "=", expression ;

law_check_decl   = "check", "laws", identifier, separators,
                   "{", separators,
                   { law_check_entry, separators, [ "," ], separators },
                   "}" ;
law_check_entry  = "instance", "=", identifier
                 | "domain", identifier, ":", type_ref, "=", expression
                 | "equality", type_ref, "=", expression
                 | "require", "assurance", "=", identifier
                 | "budget", "=", identifier ;

meta_function_decl = "meta", "fn", function_tail ;
function_decl    = "fn", function_tail ;
function_tail    = identifier, "(", parameters, ")",
                   [ "->", type_ref ],
                   ( "=", expression | block ) ;

parameters       = [ parameter, { separators, ",", separators, parameter } ] ;
parameter        = [ "read" | "edit" | "take" ], identifier,
                   [ ":", type_ref ] ;

type_ref         = function_type ;
function_type    = optional_type
                 | callable_domain, "->", function_type ;
callable_domain  = [ "read" | "edit" | "take" ], optional_type
                 | "(", ")"
                 | "(", callable_parameter, ",", callable_parameter,
                   { ",", callable_parameter }, [ "," ], ")" ;
callable_parameter = [ "read" | "edit" | "take" ], optional_type ;
optional_type    = primary_type, [ "?" ] ;
primary_type     = nominal_type
                 | "(", type_ref, ")" ;
nominal_type     = identifier,
                   [ "[", type_ref, { ",", type_ref }, "]" ] ;

block            = "{", separators, { declaration_in_block, separators }, "}" ;
declaration_in_block = function_decl | meta_function_decl | statement ;

statement        = let_stmt
                 | return_stmt
                 | while_stmt
                 | for_stmt
                 | take_stmt
                 | "break"
                 | "continue"
                 | assignment_or_expr ;

let_stmt         = "let", [ "own" ], [ "mut" ], [ "own" ], identifier,
                   [ ":", type_ref ], "=", expression ;
return_stmt      = "return", [ expression ] ;
while_stmt       = "while", expression, block ;
for_stmt         = "for", identifier, "in", expression, block ;
take_stmt        = "take", identifier ;
assignment_or_expr = expression, [ "=", expression ] ;

expression       = pipeline ;
pipeline         = coalesce, { "|>", coalesce } ;
coalesce         = logic_or, { "??", logic_or } ;
logic_or         = logic_and, { "||", logic_and } ;
logic_and        = equality, { "&&", equality } ;
equality         = comparison, { ( "==" | "!=" ), comparison } ;
comparison       = range, { ( "<" | "<=" | ">" | ">=" ), range } ;
range            = additive, { "..", additive } ;
additive         = multiplicative, { ( "+" | "-" ), multiplicative } ;
multiplicative   = power, { ( "*" | "/" | "//" | "%" ), power } ;
power            = unary, [ "**", power ] ;
unary            = [ "+" | "-" | "!" ], postfix ;
postfix          = primary, { call | member | index } ;
call             = "(", arguments, ")" ;
member           = ".", identifier ;
index            = "[", expression, "]" ;
arguments        = [ argument, { separators, ",", separators, argument },
                   [ separators, "," ] ] ;
argument         = [ identifier, ":" ], expression ;
elements         = [ expression, { separators, ",", separators, expression },
                   [ separators, "," ] ] ;

primary          = integer
                 | float
                 | string
                 | "true"
                 | "false"
                 | "null"
                 | identifier
                 | list
                 | tuple_or_group
                 | if_expr
                 | lambda ;

list             = "[", elements, "]" ;
tuple_or_group   = "(", [ expression, [ ",", elements ] ], ")" ;
if_expr          = "if", expression, block,
                   [ separators, "else", separators, ( if_expr | block ) ] ;
(* All three lambda spellings are intentional. The bare form is a lambda in
   expression position; at a match-arm boundary, the same IDENT "=>" prefix
   belongs to the arm pattern instead. The two shorthand forms have expression
   bodies only. See #943. *)
lambda           = canonical_lambda
                 | parenthesized_lambda
                 | bare_lambda ;
canonical_lambda = "fn", "(", parameters, ")",
                   ( "=>", expression | block ) ;
parenthesized_lambda = "(", parameters, ")", "=>", expression ;
bare_lambda      = identifier, "=>", expression ;

separators       = { NEWLINE | ";" } ;
identifier       = IDENT ;
integer          = INT ;
float            = FLOAT ;
string           = STRING ;
